<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background_home"
    tools:context=".home.Home_Activity_Pengajar">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titleHalamanUtama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:shadowColor="#231563"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="50"
                android:text="@string/halaman_utama"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_Jadual"
                android:layout_width="303dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:fadingEdge="horizontal|vertical"
                android:foregroundTint="#FFFFFF"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:text="@string/jadual"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_Kehadiran"
                android:layout_width="303dp"
                android:layout_height="112dp"
                android:layout_marginTop="4dp"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:text="@string/kehadiran"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_Yuran"
                android:layout_width="303dp"
                android:layout_height="112dp"
                android:layout_marginTop="4dp"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:text="YURAN"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_Pendaftaran"
                android:layout_width="303dp"
                android:layout_height="112dp"
                android:layout_marginTop="4dp"
                android:text="@string/pendaftaran"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_LPrestasi"
                android:layout_width="303dp"
                android:layout_height="112dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="0dp"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:text="@string/laporan_prestasi"
                android:textSize="30sp" />
            <Button
                android:id="@+id/btn_MaklumBalas"
                android:layout_width="303dp"
                android:layout_height="112dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="40dp"
                android:shadowColor="#000000"
                android:shadowRadius="2"
                android:text="@string/maklum_balas"
                android:textSize="30sp"
                />
        </TableLayout>
    </ScrollView>

