<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="#00FFFFFF"
    android:elevation="5dp"
    app:cardBackgroundColor="#00000000"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#EF508F"
        android:padding="15dp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nametext"
            android:layout_marginStart="10dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/KPtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailtext"
            android:layout_marginStart="10dp"
            android:text="@string/kp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="italic" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>