<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
tools:context=".maklumbalas.mb_pelajaribubapa.MaklumBalas_Activity_AddData_Pelajar_IbuBapa"
    android:background="@drawable/autumn_bg">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/search_layout"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531"
        tools:context=".maklumbalas.mb_pelajaribubapa.MaklumBalas_Activity_AddData_Pelajar_IbuBapa">

        <EditText
            android:id="@+id/add_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#0C0606"
            android:hint="@string/tajuk_maklum_balas"
            android:inputType="text"
            android:textColor="#000"
            android:textColorHint="#A3221616"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/add_desc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:backgroundTint="#000000"
            android:foregroundTint="#390A0A"
            android:gravity="top|start"
            android:hint="@string/maklum_balas"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColor="#000"
            android:textColorHint="#A3221616"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="#DABBBB"
            android:text="@string/hantar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#B6A2A2"
            android:text="@string/kembali"
            android:textSize="20sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>